** Version 0.8d2 **
Committed 7.29.10
* Customized routing and save path for project uploads via Paperclip
* Added an audio_message attachment to the Seedling model for associating audio with projects
* Added the friendly_id gem to generate URL slugs from model attributes
* Seedling model now uses friendly_id-based URLs

** Version 0.8d1 **
Committed 7.26.10
* Revamped Paperclip support for file uploads
* Removed previous Paperclip post-processing files (tiff_formatter.rb)
* Uploaded images integrate with scaffolded Seedling views

** Version 0.7.1d1 **
Committed 7.15.10
SVN Rev: 51
* Rewrote Seedlings model for Sequoia, overwriting prior ImageMagick implementation with simplified scaffolding.
* (Temporarily) removed Seedling support for media files
* Added a Location model to represent GPS coordinates of Seedlings
* Re-generated scaffolded views for Seedlings

** Version 0.7d1 **
Begun: 5.3.10
Committed 6.21.10
Corresponding SVN Revisions: 49

* Added the beginnings of the Sequoia engine
* Revamped launch code to transfer control to Sequoia rather than reading Scenes off the server
* Added an initial Sumatra KML file
* Added preliminary support for Growl-style notifications
* Updated dependency files to be consistent with new version of Closure's calcdeps.py
* Assorted bug fixes and JSDoc tweaks needed to compile successfully with Closure
* Added a stub Toolbar using goog.ui utilities.


** Version 0.6.2d2 **
Begun: 4.8.10
Committed 4.8.10
Corresponding SVN Revisions: 48

* Revamped ktree.debug to allow for selection of multiple debug output displays; console, external window, and javascript alerts are all now possible
* ktree.debug now degrades smoothly if it was configured for console output but Firebug is not available
* Fixed post-deployment Capistrano script that creates links from shared/config to the current release directory
* KarunaTree now compatible with Safari!