@@ -9,8 +9,8 @@ class UserSessionsController < ApplicationController
   def create
     @user_session = UserSession.new(params[:user_session])
     if @user_session.save
-      flash[:notice] = "Login successful!"
-      redirect_back_or_default url_for(:controller => "play", :action => "index")
+      #flash[:notice] = "Login successful!"
+      redirect_back_or_default url_for(:controller => "seedlings", :action => "index")
     else
       render :action => :new
     end
