@@ -37,7 +37,8 @@
 
 
    
-%p= link_to "New Seedling", new_seedling_path
+-if current_user
+  %p= link_to "New Seedling", new_seedling_path
 //#{@seedlings.length}
 //#{@seedlings[0].title}
 
